== 0.0.5 2010-04-27

 * Automatically add Rack::Chunked to middleware stack.

== 0.0.4 2010-04-26

 * Add when_streaming_template callback. Called after an action that
   streams a template.
 * Ensure flash is swept before headers are output.

== 0.0.3 2010-04-23

 * Fix #render calls which don't render templates (e.g. :text => '').

== 0.0.2 2010-04-21

 * Thin support.

== 0.0.1 2010-04-13

 * Hi.